# data_preparation

./: .devcontainer.json  .dockerignore  .env_template  .gitignore  .gitmodules  20211118_environment.yml  Dockerfile  LICENSE  README.md  collect.py  docker-compose.yml  environment.yml  initdb.sh  mkdocs.yml  population_data_preparation copy.py  prepare.py  pyproject.toml  requirements.txt  requirements.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: command _line.md  data_import.md  index.md  remote_database_connection.md  repository_structure.md
docs/data_collection/: landuse_buildings.md  network.md  pois.md
docs/data_preparation/: network.md  pois.md  population.md  remote_database_connection.md
pois_fusion/: bus_stop_preparation_merge.py  landuse_preparation.py  osm_feature_tags_dict.py  pois_prep_conf.yaml  pois_preparation.py  pyrosm_coll_conf.yaml  pyrosm_collector.py  research_and_temporary_storage_of_not_currently_used_stuff.py  tests_osm_data_collection_preparation.py
src/: building_classifier.joblib  bulk_csv_sql.py  bulk_import_geotiff.py  collection.py  config.yaml  credidentials_geonode.py  export_command_line.py  export_goat.py  fusion.py  import_command_line.py  osm_dict.py  pois_osm_PR2.sql  preparation.py  tests.py
src/collection/: collection.py  preparation.py
src/config/: buildings_p4b.style  config.py  config.yaml  db.yaml  landuse_p4b.style  mapconfig.xml  osm_dict.py  pois_p4b.style  style_template.style
src/db/: config.py  db.py  prepare.py
src/export/: export_command_line.py  export_goat.py  (+3 more)
(+43 files in other folders)
